<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_messaging"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message_inbox"
            android:icon="@drawable/message"
            android:title="@string/message_inbox"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/reports"
            android:title="@string/reports"/>

        <item
            android:id="@+id/nav_scanning"
            android:icon="@drawable/reports"
            android:title="@string/nav_scanning"/>
    </group>
    <group
        android:id="@+id/group_event"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/message"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/sessions"
            android:title="@string/sessions"/>
        <item
            android:id="@+id/nav_booths"
            android:icon="@drawable/booths"
            android:title="@string/booths"/>
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/products"
            android:title="@string/products"/>
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/speakers"
            android:title="@string/speakers"/>
    </group>

    <group
        android:id="@+id/group_rankings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/rankings"
            android:title="@string/rankings"/>
    </group>

    <group
        android:id="@+id/group_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            app:actionLayout="@layout/drawer_logout"
            android:title="@string/logout"/>
    </group>

    <!--<item android:title="Sub items">
        <menu>
            <item
                android:title="Sub item 1" />
            <item
                android:title="Sub item 2" />
        </menu>
    </item>-->

</menu>
