<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/snackBar_llLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/background_light"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.sspl.org.tp.LoginActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseLessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin_top_large"
            android:orientation="vertical"
            tools:ignore="UseLessParent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/activity_image_width"
                android:layout_height="@dimen/activity_image_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/layout_margin_top_large"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/tagpro_logo"/>

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ViewFlipper
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_margin_default_small"
                        android:layout_marginStart="@dimen/layout_margin_default_small"
                        android:layout_marginTop="@dimen/layout_margin_top_medium"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_ID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_id"
                                android:imeOptions="actionNext"
                                android:inputType="number|phone"
                                android:maxLines="1"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_default_small">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_login"
                                android:imeOptions="actionGo"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/login"/>

                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:id="@+id/llVisibility"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_default_medium"
                            android:gravity="end"
                            android:orientation="horizontal">


                            <TextView
                                style="?android:textAppearanceMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/layout_margin_default_small"
                                android:text="@string/stay_signed_in"/>

                            <android.support.v7.widget.AppCompatCheckBox
                                android:id="@+id/cbReceiveInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/layout_height_small"
                                android:button="@null"
                                android:checked="false"
                                android:clickable="true"
                                android:drawableEnd="@drawable/checkbox_selector"
                                android:focusable="false"
                                android:background="?android:attr/selectableItemBackground"
                                android:textColor="@color/orange"/>
                        </LinearLayout>

                        <!--<Switch
                                    android:id="@+id/switch1"
                                    style="?android:textAppearanceMedium"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/layout_margin_medium"
                                    android:layout_marginTop="@dimen/layout_margin_medium"
                                    android:text="@string/stay_signed_in"
                                    android:textAlignment="viewEnd"
                                    android:textColor="@color/gray"/>-->
                        <Button
                            android:id="@+id/sign_in"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="@dimen/login_button_width"
                            android:layout_height="@dimen/login_button_height"
                            android:layout_marginTop="@dimen/layout_margin_default_medium"
                            android:background="@drawable/cornered_button"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/action_login"
                            android:textAllCaps="false"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@android:color/white"/>

                        <Button
                            android:id="@+id/btn_forgot_password"
                            style="?android:textAppearanceMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_small"
                            android:background="@android:color/transparent"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/action_forgot_password"
                            android:textAllCaps="false"/>

                    </LinearLayout>
                </ViewFlipper>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
